change the app name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header><i class='bx bx-left-arrow-alt'></i>Weather App</header>
+      <header><i class='bx bx-left-arrow-alt'></i>The Fun Page</header>
       <section class="input-part">
         <p class="info-txt"></p>
         <div class="content">
